# Aizan-Updater

./: README.md  devMSG.vbs  pyproject.toml  requirements.txt  setup.cfg  setup.py  stableMSG.vbs  updater.py
