[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Aizan-Updater"
version = "0.1.0"
long_description = """
Updater of the Aizan project.
"""

[tool.poetry.dependencies]
python = "^3.6"
tkinter = "*"
requests = "*"
json = "*"
os = "*"
sys = "*"
zipfile = "*"
subprocess = "*"
concurrent.futures = "*"
tqdm = "*"
# Ajoutez d'autres dépendances ici
