[metadata]
name = Aizan Updater
version = 1
author = Isaac Allard
author_email = isaac.allard@voxary.site
description = Updater for Aizan
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/V-o-x-a-r-y/Aizan-Updater
license = MIT

[options]
packages = find:
install_requires =
    requests
    json
    concurrent.futures
    tqdm

[options.packages.find]
exclude =
    tests
    docs
